tests/bad/testfile-main-argument.go
package main

func main(x int) {}
